--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.4.1
   lottie: ^2.6.0
+  vibration: ^1.7.4
 
   cupertino_icons: ^1.0.8
 
