--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ flutter:
     - assets/icons/
     - assets/logo/splash_logo.png
     - assets/animations/d20_roll.json
+    - assets/icons/history_icon_1.png
   fonts:
     - family: MedievalSharp
       fonts:
